exports[`Default`] = `
<div
  className="">
  What is a Product Designer? An awesome story by 
  <a
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`doublePadding`] = `
<div
  className=" ">
  What is a Product Designer? An awesome story by 
  <a
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`empty`] = `
<div
  className=" ">
  Nothing to see here! 👻
</div>
`;

exports[`failed`] = `
<div
  className=" ">
  What is a Product Designer? An awesome story by 
  <a
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`noBorder`] = `
<div
  className=" ">
  What is a Product Designer? An awesome story by 
  <a
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;

exports[`noPadding`] = `
<div
  className=" ">
  What is a Product Designer? An awesome story by 
  <a
    href="#">
    @jgadapee
  </a>
   over on Medium! 
  <a
    href="#">
    http://buff.ly/1LTbUqv
  </a>
</div>
`;
